CHANGES
*******

0.3 (unreleased)
================

- Updated the test suite to work with Morepath 0.15.

- Set up integration with Travis CI.

- Added Tox environments for Python 3.3 and 3.5, PyPy 3, PEP8.

- Using Python 3.5 for PEP8 and coverage.

- Clean up metadata.

- Update supported Python versions.


0.2 (2016-01-23)
================

- The ``MOREPATH_TEMPLATE_AUTO_RELOAD`` environment variable may now be used
  to control the auto reloading behavior of Chameleon.

  See README.rst for details.

  Fixes Issue #1: https://github.com/morepath/more.chameleon/issues/1


0.1 (2015-04-09)
================

- Initial public release.