@@ -1,5 +1,5 @@
 [tox]
-envlist = py36,py37,py38,pypy3,pep8,coverage
+envlist = py36,py37,py38,py39,pypy3,pre-commit,coverage
 
 [testenv]
 deps = -e{toxinidir}[test]
@@ -10,11 +10,23 @@ usedevelop = True
 basepython = python3
 commands = pytest --cov more.chameleon --cov-report term-missing {posargs}
 
-[testenv:pep8]
+[testenv:pre-commit]
 basepython = python3
-deps = {[testenv]deps}
-       flake8
-commands = flake8 more setup.py
+deps = pre-commit
+commands = pre-commit run --all-files
 
 [pytest]
 testpaths = more/chameleon
+
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39, pre-commit, mypy, coverage
+
+[flake8]
+max-line-length = 88
+ignore =
+    E231  # clashes with black
+    W503
